# container2wasm

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.test  GOVERNANCE.md  MAINTAINERS  Makefile  README.md  ROADMAP.md  embed.go  go.mod  go.sum
patches/bochs/Bochs/bochs-testing/plugin-test/: Makefile.in  README  common-make-defs.txt  configure  configure.in  do_tests.sh  filter-test-output  testscript.in
patches/bochs/Bochs/bochs-testing/plugin-test/libltdl/: acinclude.m4  aclocal.m4  configure  configure.in  ltdl.c
patches/bochs/Bochs/bochs-testing/plugin-test/test1-static/: Makefile.in  README  module1.cc  module1.h  uselib.cc  uselib.out.expected
patches/bochs/Bochs/bochs-testing/plugin-test/test10-modvirtual/: README  module2.cc  modules.h  uselib.out.expected
patches/bochs/Bochs/bochs-testing/plugin-test/test11-modglobalconstr/: README  main.cc  main.h  module2.cc
patches/bochs/Bochs/bochs-testing/plugin-test/test12-modglobalconstr2/: README  module1.cc  module2.cc  uselib.out.expected
patches/bochs/Bochs/bochs-testing/plugin-test/test2-dynamic/: Makefile.in  README  module1.cc  module1.h  uselib.out.expected
patches/bochs/Bochs/bochs-testing/plugin-test/test3-twomodules/: Makefile.in  README  module1.cc  module2.h  uselib.cc  uselib.out.expected
patches/bochs/Bochs/bochs-testing/plugin-test/test4-interdep/: Makefile.in  README  module1.h  module2.cc  uselib.cc
patches/bochs/Bochs/bochs-testing/plugin-test/test5-execsymbols/: README  module1.cc  module2.cc  module2.h  uselib.cc  uselib.h  uselib.out.expected
patches/bochs/Bochs/bochs-testing/plugin-test/test6-ltdlopen/: README  main.cc  (+4 more)
(+1003 files in other folders)
